@@ -1,5 +1,13 @@
 2012-10-27  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
+	* run-addrname-test.sh: New test for PIE relocation.
+	* testfile70.core.bz2: New file.
+	* testfile70.exec.bz2: New file.
+	* Makefile.am (EXTRA_DIST): Add testfile70.core.bz2 and
+	testfile70.exec.bz2 .
+
+2012-10-27  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
 	* Makefile.am (EXTRA_DIST): Add testfile64.bz2, testfile65.bz2,
 	testfile69.core.bz2 and testfile69.so.bz2 .
 
